Increasing RAG service test coverage up to 80%